--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,38 @@
+# Dependencies
+node_modules
+
+# Build output
+dist
+dist-ssr
+
+# Environment files (contains secrets)
+.env
+.env.local
+*.local
+
+# Claude configuration
+.claude/
+
+# Test screenshots
+.playwright-mcp/
+
+# Design documents
+*.md
+!README.md
+
+# Other
+supabase/
+scripts/
+metadata.json
+
 # Logs
 logs
 *.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
+# Editor
 .vscode/*
-!.vscode/extensions.json
 .idea
 .DS_Store
 *.suo
-*.ntvs*
-*.njsproj
-*.sln
 *.sw?
-.env
